<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="my_profile">My Profile</string>
    <string name="name">Your Name</string>
    <string name="hansi">Hansi Pabasara</string>
    <string name="email">Your Email</string>
    <string name="hansi_email">hansi@example.com</string>
    <string name="tp">Your Contact No</string>
    <string name="hansi_tp">0714939578</string>

    <string name="saveprof">SAVE</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="notes">MY NOTES</string>
    <string name="newnote">NEW NOTE</string>
    <string name="title_activity_note_list">noteListActivity</string>
    <string name="title_activity_new_list">newListActivity</string>
    <string name="title_activity_notes_add">notesAddActivity</string>
</resources>
