<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".profileActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    android:text="My Profile"
    android:textSize="19sp"
    android:textStyle="bold"
    />


<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/name"
    android:gravity="left|center"
    android:textSize="18dp"
    android:paddingLeft="20sp"
    android:textColor="@color/colorPrimaryText"
    />

<EditText
    android:id="@+id/profile_name"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:hint="@string/hansi"
    android:paddingLeft="20sp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/email"
    android:gravity="left|center"
    android:textSize="18dp"
    android:paddingLeft="20sp"
    android:textColor="@color/colorPrimaryText"
    />

<EditText
    android:id="@+id/profile_email"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:hint="@string/hansi_email"
    android:paddingLeft="20sp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/tp"
    android:gravity="left|center"
    android:textSize="18dp"
    android:paddingLeft="20sp"
    android:textColor="@color/colorPrimaryText"
    />

<EditText
    android:id="@+id/profile_mobile"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:hint="@string/hansi_tp"
    android:paddingLeft="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.7"
        android:background="@color/colorPrimaryDark"
        android:onClick="saveProf"
        android:text="@string/saveprof"
        android:textColor="#fff"
        android:textSize="20sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.07"
    android:text=""
    android:textSize="18sp"
    />

</LinearLayout>